--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
@@ -16,6 +16,7 @@
     />
     <title>Alura Geek</title>
   </head>
+
   <body>
     <header class="cabecalho">
       <div class="logo__container">
@@ -39,38 +40,184 @@
         <button class="btn blue__btn">Ver Consoles</button>
       </div>
     </section>
-    <section class="products__section" data-product>
-      <div class="text__product">
-        <h1 class="linha__title">Star Wars</h1>
-        <a class="link__product" href="#"
-          >Ver tudo <i class="fa-solid fa-arrow-right"></i
-        ></a>
-      </div>
-      <div class="product__container">
-        <div class="product">
-          <img class="product__img" src="./public/imgs/product1.png" alt="product">
-          <p class="product__name">Caneca Stormtrooper</p>
-          <p class="product__price">R$65,00</p>
-          <a class="link__product" href="#">Ver produto</a>
+    <div class="products">
+      <section class="products__section" data-product>
+        <div class="text__product">
+          <h1 class="linha__title">Star Wars</h1>
+          <a class="link__product" href="#"
+            >Ver tudo <i class="fa-solid fa-arrow-right"></i
+          ></a>
         </div>
-        <div class="product">
-          <img class="product__img" src="./public/imgs/product2.png" alt="product">
-          <p class="product__name">Mascara Darth Vader</p>
-          <p class="product__price">R$120,00</p>
-          <a class="link__product" href="#">Ver produto</a>
+        <div class="product__container">
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product1.png"
+              alt="product"
+            />
+            <p class="product__name">Caneca Stormtrooper</p>
+            <p class="product__price">R$65,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product2.png"
+              alt="product"
+            />
+            <p class="product__name">Mascara Darth Vader</p>
+            <p class="product__price">R$120,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product3.png"
+              alt="product"
+            />
+            <p class="product__name">Boneco Yoda</p>
+            <p class="product__price">R$135,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product4.png"
+              alt="product"
+            />
+            <p class="product__name">Armadura Stormtrooper</p>
+            <p class="product__price">R$575,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
         </div>
-        <div class="product">
-          <img class="product__img" src="./public/imgs/product3.png" alt="product">
-          <p class="product__name">Boneco Yoda</p>
-          <p class="product__price">R$135,00</p>
-          <a class="link__product" href="#">Ver produto</a>
+      </section>
+    </div>
+    <div class="products">
+      <section class="products__section" data-product>
+        <div class="text__product">
+          <h1 class="linha__title">Consoles</h1>
+          <a class="link__product" href="#"
+            >Ver tudo <i class="fa-solid fa-arrow-right"></i
+          ></a>
         </div>
-        <div class="product">
-          <img class="product__img" src="./public/imgs/product4.png" alt="product">
-          <p class="product__name">Armadura Stormtrooper</p>
-          <p class="product__price">R$575,00</p>
-          <a class="link__product" href="#">Ver produto</a>
+        <div class="product__container">
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product5.png"
+              alt="product"
+            />
+            <p class="product__name">Controle Xbox</p>
+            <p class="product__price">R$465,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product6.png"
+              alt="product"
+            />
+            <p class="product__name">Playstation 5</p>
+            <p class="product__price">R$4.120,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product7.png"
+              alt="product"
+            />
+            <p class="product__name">Nitendo 64</p>
+            <p class="product__price">R$1.035,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product8.png"
+              alt="product"
+            />
+            <p class="product__name">Nitendo Switch</p>
+            <p class="product__price">R$2.575,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
         </div>
+      </section>
+    </div>
+    <div class="products">
+      <section class="products__section" data-product>
+        <div class="text__product">
+          <h1 class="linha__title">Diversos</h1>
+          <a class="link__product" href="#"
+            >Ver tudo <i class="fa-solid fa-arrow-right"></i
+          ></a>
+        </div>
+        <div class="product__container">
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product9.png"
+              alt="product"
+            />
+            <p class="product__name">Produto XPTO</p>
+            <p class="product__price">R$1,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product10.png"
+              alt="product"
+            />
+            <p class="product__name">Camisa Gamer</p>
+            <p class="product__price">R$120,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product11.png"
+              alt="product"
+            />
+            <p class="product__name">Boneco Sonic</p>
+            <p class="product__price">R$185,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+          <div class="product">
+            <img
+              class="product__img"
+              src="./public/imgs/product12.png"
+              alt="product"
+            />
+            <p class="product__name">Relógio Gamer</p>
+            <p class="product__price">R$775,00</p>
+            <a class="link__product" href="#">Ver produto</a>
+          </div>
+        </div>
+      </section>
+    </div>
+    <section class="about__container">
+      <nav class="about__nav__container">
+        <div class="about__img__container">
+          <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+        </div>
+        <ul class="about__links">
+          <li><a href="#">Quem somos nós </a></li>
+          <li><a href="#">Política de privacidade</a></li>
+          <li><a href="#">Nossas lojas</a></li>
+          <li><a href="#">Quero ser franqueado</a></li>
+          <li><a href="#">Anuncie aqui</a></li>
+        </ul>
+      </nav>
+      <div class="contact__container">
+        <h3>Fale conosco</h3>
+        <input type="text" placeholder="Nome" />
+        <textarea
+          cols="30"
+          rows="5"
+          placeholder="Escreva sua mensagem"
+        ></textarea>
+        <button class="btn blue__btn">Eviar mensagem</button>
       </div>
     </section>
   </body>
