--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
 
   <body>
     <header class="cabecalho">
-      <div class="logo__container">
-        <img class="logo__img" src="./public/imgs/Logo.png" alt="" />
-      </div>
       <nav class="navbar">
+        <div class="logo__container">
+          <img class="logo__img" src="./public/imgs/Logo.png" alt="" />
+        </div>
+        <div class="serching__container">
+          <input
+            type="text"
+            class="searching__field"
+            placeholder="O que deseja encontrar?"
+          />
+          <button class="btn__tablet__search">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </div>
         <button class="btn light__btn">Login</button>
-      </nav>
-      <nav class="navbar">
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
@@ -196,29 +204,31 @@
         </div>
       </section>
     </div>
-    <section class="about__container">
-      <nav class="about__nav__container">
-        <div class="about__img__container">
-          <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+    <section class="about">
+      <section class="about__container">
+        <div class="about__nav__container">
+          <div class="about__img__container">
+            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+          </div>
+          <ul class="about__links">
+            <li><a href="#">Quem somos nós </a></li>
+            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#">Nossas lojas</a></li>
+            <li><a href="#">Quero ser franqueado</a></li>
+            <li><a href="#">Anuncie aqui</a></li>
+          </ul>
         </div>
-        <ul class="about__links">
-          <li><a href="#">Quem somos nós </a></li>
-          <li><a href="#">Política de privacidade</a></li>
-          <li><a href="#">Nossas lojas</a></li>
-          <li><a href="#">Quero ser franqueado</a></li>
-          <li><a href="#">Anuncie aqui</a></li>
-        </ul>
-      </nav>
-      <div class="contact__container">
-        <h3>Fale conosco</h3>
-        <input type="text" placeholder="Nome" />
-        <textarea
-          cols="30"
-          rows="5"
-          placeholder="Escreva sua mensagem"
-        ></textarea>
-        <button class="btn blue__btn">Eviar mensagem</button>
-      </div>
+        <div class="contact__container">
+          <h3>Fale conosco</h3>
+          <input type="text" placeholder="Nome" />
+          <textarea
+            cols="30"
+            rows="5"
+            placeholder="Escreva sua mensagem"
+          ></textarea>
+          <button class="btn blue__btn">Eviar mensagem</button>
+        </div>
+      </section>
     </section>
   </body>
 </html>
