finishing desktop styles

--- a/index.html
+++ b/index.html
@@ -230,5 +230,8 @@
         </div>
       </section>
     </section>
+    <footer class="rodape">
+      <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023</p>
+    </footer>
   </body>
 </html>
