finishing desktop styles

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       </section>
     </section>
     <footer class="rodape">
-      <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023</p>
+      <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
   </body>
 </html>
