--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <header class="cabecalho">
       <nav class="navbar">
         <div class="logo__container">
-          <img class="logo__img" src="./public/imgs/Logo.png" alt="" />
+          <a href="./index.html"
+            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
+          /></a>
         </div>
         <div class="serching__container">
           <input
@@ -33,7 +35,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
-        <button class="btn light__btn">Login</button>
+        <a class="btn light__btn" href="./login.html">Login</a>
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
