finishing home page styles

--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <section class="products__section" data-product>
           <div class="text__product">
             <h1 class="linha__title">Todos os produtos</h1>
-            <a class="btn blue__btn" href="#">Adicionar o produto</a>
+            <a class="btn blue__btn" href="#">Adicionar produto</a>
           </div>
           <div class="product__container">
             <div class="product">
@@ -90,12 +90,6 @@
               <p class="product__price">R$575,00</p>
               <a class="link__product" href="#">Ver produto</a>
             </div>
-          </div>
-        </section>
-      </div>
-      <div class="products">
-        <section class="products__section" data-product>
-          <div class="product__container">
             <div class="product">
               <img
                 class="product__img"
@@ -136,12 +130,6 @@
               <p class="product__price">R$2.575,00</p>
               <a class="link__product" href="#">Ver produto</a>
             </div>
-          </div>
-        </section>
-      </div>
-      <div class="products">
-        <section class="products__section" data-product>
-          <div class="product__container">
             <div class="product">
               <img
                 class="product__img"
@@ -182,38 +170,98 @@
               <p class="product__price">R$775,00</p>
               <a class="link__product" href="#">Ver produto</a>
             </div>
+            <div class="product">
+              <img
+                class="product__img"
+                src="./public/imgs/product13.png"
+                alt="product"
+              />
+              <p class="product__name">Baby Yoda</p>
+              <p class="product__price">R$335,00</p>
+              <a class="link__product" href="#">Ver produto</a>
+            </div>
+            <div class="product">
+              <img
+                class="product__img"
+                src="./public/imgs/product14.png"
+                alt="product"
+              />
+              <p class="product__name">Kylo Ren</p>
+              <p class="product__price">R$175,00</p>
+              <a class="link__product" href="#">Ver produto</a>
+            </div>
+            <div class="product">
+              <img
+                class="product__img"
+                src="./public/imgs/product15.png"
+                alt="product"
+              />
+              <p class="product__name">Xbox Series X</p>
+              <p class="product__price">R$4.775,00</p>
+              <a class="link__product" href="#">Ver produto</a>
+            </div>
+            <div class="product">
+              <img
+                class="product__img"
+                src="./public/imgs/product16.png"
+                alt="product"
+              />
+              <p class="product__name">Game Boy</p>
+              <p class="product__price">R$775,00</p>
+              <a class="link__product" href="#">Ver produto</a>
+            </div>
+            <div class="product">
+              <img
+                class="product__img"
+                src="./public/imgs/product17.png"
+                alt="product"
+              />
+              <p class="product__name">X Burguer T-Shirt</p>
+              <p class="product__price">R$75,00</p>
+              <a class="link__product" href="#">Ver produto</a>
+            </div>
+            <div class="product">
+              <img
+                class="product__img"
+                src="./public/imgs/product18.png"
+                alt="product"
+              />
+              <p class="product__name">Pikachu Fantasy</p>
+              <p class="product__price">R$285,00</p>
+              <a class="link__product" href="#">Ver produto</a>
+            </div>
           </div>
         </section>
       </div>
-    </main>
-    <section class="about">
-      <section class="about__container">
-        <div class="about__nav__container">
-          <div class="about__img__container">
-            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+      <section class="about">
+        <section class="about__container">
+          <div class="about__nav__container">
+            <div class="about__img__container">
+              <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+            </div>
+            <ul class="about__links">
+              <li><a href="#">Quem somos nós </a></li>
+              <li><a href="#">Política de privacidade</a></li>
+              <li><a href="#">Nossas lojas</a></li>
+              <li><a href="#">Quero ser franqueado</a></li>
+              <li><a href="#">Anuncie aqui</a></li>
+            </ul>
           </div>
-          <ul class="about__links">
-            <li><a href="#">Quem somos nós </a></li>
-            <li><a href="#">Política de privacidade</a></li>
-            <li><a href="#">Nossas lojas</a></li>
-            <li><a href="#">Quero ser franqueado</a></li>
-            <li><a href="#">Anuncie aqui</a></li>
-          </ul>
-        </div>
-        <div class="contact__container">
-          <h3>Fale conosco</h3>
-          <input type="text" placeholder="Nome" />
-          <textarea
-            cols="30"
-            rows="5"
-            placeholder="Escreva sua mensagem"
-          ></textarea>
-          <button class="btn blue__btn">Eviar mensagem</button>
-        </div>
+          <div class="contact__container">
+            <h3>Fale conosco</h3>
+            <input type="text" placeholder="Nome" />
+            <textarea
+              cols="30"
+              rows="5"
+              placeholder="Escreva sua mensagem"
+            ></textarea>
+            <button class="btn blue__btn">Eviar mensagem</button>
+          </div>
+        </section>
       </section>
-    </section>
-    <footer class="rodape">
-      <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
-    </footer>
+      <footer class="rodape">
+        <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
+      </footer>
+    </main>
   </body>
 </html>
