--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <section class="products__section" data-product>
         <div class="text__product">
           <h1 class="linha__title">Star Wars</h1>
-          <a class="link__product" href="#"
-            >Ver tudo <i class="fa-solid fa-arrow-right"></i
+          <a class="link__product" href="./home.html"
+            >Ver tudo<i class="fa-solid fa-arrow-right"></i
           ></a>
         </div>
         <div class="product__container">
