add new__product page

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/desktop__mq.css" />
-    <link rel="stylesheet" href="./styles/tablet__mq.css" />
-    <link rel="stylesheet" href="./styles/mobile__mq.css" />
-    <link rel="stylesheet" href="./styles/globalStyles.css" />
-    <link rel="stylesheet" href="./styles/home-styles.css" />
+    <link rel="stylesheet" href="../styles/desktop__mq.css" />
+    <link rel="stylesheet" href="../styles/tablet__mq.css" />
+    <link rel="stylesheet" href="../styles/mobile__mq.css" />
+    <link rel="stylesheet" href="../styles/globalStyles.css" />
+    <link rel="stylesheet" href="../styles/home-styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -23,7 +23,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -47,13 +47,15 @@
         <section class="products__section" data-product>
           <div class="text__product">
             <h1 class="linha__title">Todos os produtos</h1>
-            <a class="btn blue__btn" href="#">Adicionar produto</a>
+            <a class="btn blue__btn" href="./new__product.html"
+              >Adicionar produto</a
+            >
           </div>
           <div class="product__container">
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product1.png"
+                src="../public/imgs/product1.png"
                 alt="product"
               />
               <p class="product__name">Caneca Stormtrooper</p>
@@ -63,7 +65,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product2.png"
+                src="../public/imgs/product2.png"
                 alt="product"
               />
               <p class="product__name">Mascara Darth Vader</p>
@@ -73,7 +75,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product3.png"
+                src="../public/imgs/product3.png"
                 alt="product"
               />
               <p class="product__name">Boneco Yoda</p>
@@ -83,7 +85,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product4.png"
+                src="../public/imgs/product4.png"
                 alt="product"
               />
               <p class="product__name">Armadura Stormtrooper</p>
@@ -93,7 +95,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product5.png"
+                src="../public/imgs/product5.png"
                 alt="product"
               />
               <p class="product__name">Controle Xbox</p>
@@ -103,7 +105,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product6.png"
+                src="../public/imgs/product6.png"
                 alt="product"
               />
               <p class="product__name">Playstation 5</p>
@@ -113,7 +115,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product7.png"
+                src="../public/imgs/product7.png"
                 alt="product"
               />
               <p class="product__name">Nitendo 64</p>
@@ -123,7 +125,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product8.png"
+                src="../public/imgs/product8.png"
                 alt="product"
               />
               <p class="product__name">Nitendo Switch</p>
@@ -133,7 +135,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product9.png"
+                src="../public/imgs/product9.png"
                 alt="product"
               />
               <p class="product__name">Produto XPTO</p>
@@ -143,7 +145,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product10.png"
+                src="../public/imgs/product10.png"
                 alt="product"
               />
               <p class="product__name">Camisa Gamer</p>
@@ -153,7 +155,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product11.png"
+                src="../public/imgs/product11.png"
                 alt="product"
               />
               <p class="product__name">Boneco Sonic</p>
@@ -163,7 +165,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product12.png"
+                src="../public/imgs/product12.png"
                 alt="product"
               />
               <p class="product__name">Relógio Gamer</p>
@@ -173,7 +175,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product13.png"
+                src="../public/imgs/product13.png"
                 alt="product"
               />
               <p class="product__name">Baby Yoda</p>
@@ -183,7 +185,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product14.png"
+                src="../public/imgs/product14.png"
                 alt="product"
               />
               <p class="product__name">Kylo Ren</p>
@@ -193,7 +195,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product15.png"
+                src="../public/imgs/product15.png"
                 alt="product"
               />
               <p class="product__name">Xbox Series X</p>
@@ -203,7 +205,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product16.png"
+                src="../public/imgs/product16.png"
                 alt="product"
               />
               <p class="product__name">Game Boy</p>
@@ -213,7 +215,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product17.png"
+                src="../public/imgs/product17.png"
                 alt="product"
               />
               <p class="product__name">X Burguer T-Shirt</p>
@@ -223,7 +225,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="./public/imgs/product18.png"
+                src="../public/imgs/product18.png"
                 alt="product"
               />
               <p class="product__name">Pikachu Fantasy</p>
@@ -237,7 +239,11 @@
         <section class="about__container">
           <div class="about__nav__container">
             <div class="about__img__container">
-              <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+              <img
+                class="about__img"
+                src="../public/imgs/Logo.png"
+                alt="logo"
+              />
             </div>
             <ul class="about__links">
               <li><a href="#">Quem somos nós </a></li>
