--- a/pages/index.html
+++ b/pages/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/desktop__mq.css" />
-    <link rel="stylesheet" href="./styles/tablet__mq.css" />
-    <link rel="stylesheet" href="./styles/mobile__mq.css" />
-    <link rel="stylesheet" href="./styles/globalStyles.css" />
+    <link rel="stylesheet" href="../styles/desktop__mq.css" />
+    <link rel="stylesheet" href="../styles/tablet__mq.css" />
+    <link rel="stylesheet" href="../styles/mobile__mq.css" />
+    <link rel="stylesheet" href="../styles/globalStyles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -22,7 +22,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -62,7 +62,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product1.png"
+              src="../public/imgs/product1.png"
               alt="product"
             />
             <p class="product__name">Caneca Stormtrooper</p>
@@ -72,7 +72,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product2.png"
+              src="../public/imgs/product2.png"
               alt="product"
             />
             <p class="product__name">Mascara Darth Vader</p>
@@ -82,7 +82,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product3.png"
+              src="../public/imgs/product3.png"
               alt="product"
             />
             <p class="product__name">Boneco Yoda</p>
@@ -92,7 +92,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product4.png"
+              src="../public/imgs/product4.png"
               alt="product"
             />
             <p class="product__name">Armadura Stormtrooper</p>
@@ -114,7 +114,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product5.png"
+              src="../public/imgs/product5.png"
               alt="product"
             />
             <p class="product__name">Controle Xbox</p>
@@ -124,7 +124,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product6.png"
+              src="../public/imgs/product6.png"
               alt="product"
             />
             <p class="product__name">Playstation 5</p>
@@ -134,7 +134,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product7.png"
+              src="../public/imgs/product7.png"
               alt="product"
             />
             <p class="product__name">Nitendo 64</p>
@@ -144,7 +144,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product8.png"
+              src="../public/imgs/product8.png"
               alt="product"
             />
             <p class="product__name">Nitendo Switch</p>
@@ -166,7 +166,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product9.png"
+              src="../public/imgs/product9.png"
               alt="product"
             />
             <p class="product__name">Produto XPTO</p>
@@ -176,7 +176,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product10.png"
+              src="../public/imgs/product10.png"
               alt="product"
             />
             <p class="product__name">Camisa Gamer</p>
@@ -186,7 +186,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product11.png"
+              src="../public/imgs/product11.png"
               alt="product"
             />
             <p class="product__name">Boneco Sonic</p>
@@ -196,7 +196,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="./public/imgs/product12.png"
+              src="../public/imgs/product12.png"
               alt="product"
             />
             <p class="product__name">Relógio Gamer</p>
@@ -210,7 +210,7 @@
       <section class="about__container">
         <div class="about__nav__container">
           <div class="about__img__container">
-            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+            <img class="about__img" src="../public/imgs/Logo.png" alt="logo" />
           </div>
           <ul class="about__links">
             <li><a href="#">Quem somos nós </a></li>
