--- a/pages/new__product.html
+++ b/pages/new__product.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/desktop__mq.css" />
-    <link rel="stylesheet" href="./styles/tablet__mq.css" />
-    <link rel="stylesheet" href="./styles/mobile__mq.css" />
-    <link rel="stylesheet" href="./styles/globalStyles.css" />
+    <link rel="stylesheet" href="../styles/desktop__mq.css" />
+    <link rel="stylesheet" href="../styles/tablet__mq.css" />
+    <link rel="stylesheet" href="../styles/mobile__mq.css" />
+    <link rel="stylesheet" href="../styles/globalStyles.css" />
+    <link rel="stylesheet" href="../styles/new__product-styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -22,7 +23,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -35,7 +36,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
-        <a class="btn light__btn" href="./login.html">Login</a>
+        <a class="btn light__btn" href="#">Menu administrador</a>
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
@@ -43,25 +44,45 @@
     </header>
     <div class="login__page__container">
       <form class="form__input">
-        <h1 class="login__title">Iniciar Sessão</h1>
+        <h1 class="login__title">Adicionar novo produto</h1>
         <input
           class="input__email__login"
-          type="text"
-          placeholder="Escreva seu email"
+          type="url"
+          placeholder="Url da imagem"
+          required
         />
         <input
           class="input__password__login"
           type="text"
-          placeholder="Escreva sua senha"
+          placeholder="Categoria"
+          required
         />
-        <button class="btn blue__btn login__btn">Entrar</button>
+        <input
+          class="input__password__login"
+          type="text"
+          placeholder="Nome do produto"
+          required
+        />
+        <input
+          class="input__password__login"
+          type="number"
+          placeholder="Preço do produto"
+          required
+        />
+        <input
+          class="input__password__login"
+          type="text"
+          placeholder="Descrição do produto"
+          required
+        />
+        <button class="btn blue__btn login__btn">Adicionar produto</button>
       </form>
     </div>
     <section class="about">
       <section class="about__container">
         <div class="about__nav__container">
           <div class="about__img__container">
-            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
+            <img class="about__img" src="../public/imgs/Logo.png" alt="logo" />
           </div>
           <ul class="about__links">
             <li><a href="#">Quem somos nós </a></li>
