finishing styles and pages

--- a/pages/new__product.html
+++ b/pages/new__product.html
@@ -36,7 +36,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
-        <a class="btn light__btn" href="#">Menu administrador</a>
+        <a class="btn light__btn menu__btn" href="#">Menu administrador</a>
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
@@ -65,7 +65,7 @@
         />
         <input
           class="input__password__login"
-          type="number"
+          type="text"
           placeholder="Preço do produto"
           required
         />
@@ -75,7 +75,13 @@
           placeholder="Descrição do produto"
           required
         />
-        <button class="btn blue__btn login__btn">Adicionar produto</button>
+        <textarea
+          class="description__product"
+          cols="30"
+          placeholder="Descrição do produto"
+          required
+        ></textarea>
+        <button class="btn blue__btn">Adicionar produto</button>
       </form>
     </div>
     <section class="about">
