add function in butto ofmessage

--- a/pages/index.html
+++ b/pages/index.html
@@ -47,7 +47,12 @@
         <h3 class="subtitle__hero">
           Produtos selecionados com 33% de desconto
         </h3>
-        <button class="btn blue__btn">Ver Consoles</button>
+        <button
+          class="btn blue__btn"
+          onclick="window.scrollTo(0, document.getElementById('consoles_id').offsetTop)"
+        >
+          Ver Consoles
+        </button>
       </div>
     </section>
     <div class="products">
@@ -105,7 +110,7 @@
     <div class="products">
       <section class="products__section" data-product>
         <div class="text__product">
-          <h1 class="linha__title">Consoles</h1>
+          <h1 class="linha__title" id="consoles_id">Consoles</h1>
           <a class="link__product" href="#"
             >Ver tudo <i class="fa-solid fa-arrow-right"></i
           ></a>
@@ -220,20 +225,32 @@
             <li><a href="#">Anuncie aqui</a></li>
           </ul>
         </div>
-        <div class="contact__container">
+        <form class="contact__container">
           <h3>Fale conosco</h3>
-          <input type="text" placeholder="Nome" />
+          <input
+            id="namePerson"
+            type="text"
+            placeholder="Nome"
+            maxlength="40"
+            required
+          />
           <textarea
+            id="messageFromPerson"
             cols="30"
             rows="5"
             placeholder="Escreva sua mensagem"
+            maxlength="120"
+            required
           ></textarea>
-          <button class="btn blue__btn">Eviar mensagem</button>
-        </div>
+          <button class="btn blue__btn" id="btn__message" type="submit">
+            Eviar mensagem
+          </button>
+        </form>
       </section>
     </section>
     <footer class="rodape">
       <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
+    <script src="../services/send_message.js"></script>
   </body>
 </html>
