--- a/home.html
+++ b/home.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/desktop__mq.css" />
-    <link rel="stylesheet" href="../styles/tablet__mq.css" />
-    <link rel="stylesheet" href="../styles/mobile__mq.css" />
-    <link rel="stylesheet" href="../styles/globalStyles.css" />
-    <link rel="stylesheet" href="../styles/home-styles.css" />
+    <link rel="stylesheet" href="./styles/desktop__mq.css" />
+    <link rel="stylesheet" href="./styles/tablet__mq.css" />
+    <link rel="stylesheet" href="./styles/mobile__mq.css" />
+    <link rel="stylesheet" href="./styles/globalStyles.css" />
+    <link rel="stylesheet" href="./styles/home-styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
