--- a/new__product.html
+++ b/new__product.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/desktop__mq.css" />
-    <link rel="stylesheet" href="../styles/tablet__mq.css" />
-    <link rel="stylesheet" href="../styles/mobile__mq.css" />
-    <link rel="stylesheet" href="../styles/globalStyles.css" />
+    <link rel="stylesheet" href="./styles/desktop__mq.css" />
+    <link rel="stylesheet" href="./styles/tablet__mq.css" />
+    <link rel="stylesheet" href="./styles/mobile__mq.css" />
+    <link rel="stylesheet" href="./styles/globalStyles.css" />
+    <link rel="stylesheet" href="./styles/new__product-styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -35,6 +36,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
+        <a class="btn light__btn menu__btn" href="#">Menu administrador</a>
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
@@ -42,23 +44,35 @@
     </header>
     <div class="login__page__container">
       <form class="form__input">
-        <h1 class="login__title">Iniciar Sessão</h1>
+        <h1 class="login__title">Adicionar novo produto</h1>
+        <label for="new__file__product">Selecione uma imagem</label>
+        <input class="new__file__product" type="file" required />
         <input
-          class="input__email__login"
-          type="email"
-          placeholder="Escreva seu email"
+          class="category__product"
+          type="text"
+          placeholder="Categoria"
           required
-          maxlength="50"
         />
         <input
-          class="input__password__login"
-          type="password"
-          placeholder="Escreva sua senha"
+          class="new__name__product"
+          type="text"
+          placeholder="Nome do produto"
+          maxlength="20"
           required
-          minlength="8"
-          maxlength="50"
         />
-        <button class="btn blue__btn login__btn">Entrar</button>
+        <input
+          class="new__price__product"
+          type="number"
+          placeholder="Preço do produto"
+          required
+        />
+        <textarea
+          class="new__description__product"
+          maxlength="150"
+          placeholder="Descrição do produto"
+          required
+        ></textarea>
+        <button class="btn blue__btn">Adicionar produto</button>
       </form>
     </div>
     <section class="about">
@@ -101,7 +115,6 @@
     <footer class="rodape">
       <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
-    <script src="../services/login__validation.js"></script>
     <script src="../services/send_message.js"></script>
   </body>
 </html>
