update url pages html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -67,7 +67,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product1.png"
+              src="./public/imgs/product1.png"
               alt="product"
             />
             <p class="product__name">Caneca Stormtrooper</p>
@@ -77,7 +77,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product2.png"
+              src="./public/imgs/product2.png"
               alt="product"
             />
             <p class="product__name">Mascara Darth Vader</p>
@@ -87,7 +87,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product3.png"
+              src="./public/imgs/product3.png"
               alt="product"
             />
             <p class="product__name">Boneco Yoda</p>
@@ -97,7 +97,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product4.png"
+              src="./public/imgs/product4.png"
               alt="product"
             />
             <p class="product__name">Armadura Stormtrooper</p>
@@ -119,7 +119,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product5.png"
+              src="./public/imgs/product5.png"
               alt="product"
             />
             <p class="product__name">Controle Xbox</p>
@@ -129,7 +129,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product6.png"
+              src="./public/imgs/product6.png"
               alt="product"
             />
             <p class="product__name">Playstation 5</p>
@@ -139,7 +139,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product7.png"
+              src="./public/imgs/product7.png"
               alt="product"
             />
             <p class="product__name">Nitendo 64</p>
@@ -149,7 +149,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product8.png"
+              src="./public/imgs/product8.png"
               alt="product"
             />
             <p class="product__name">Nitendo Switch</p>
@@ -171,7 +171,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product9.png"
+              src="./public/imgs/product9.png"
               alt="product"
             />
             <p class="product__name">Produto XPTO</p>
@@ -181,7 +181,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product10.png"
+              src="./public/imgs/product10.png"
               alt="product"
             />
             <p class="product__name">Camisa Gamer</p>
@@ -191,7 +191,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product11.png"
+              src="./public/imgs/product11.png"
               alt="product"
             />
             <p class="product__name">Boneco Sonic</p>
@@ -201,7 +201,7 @@
           <div class="product">
             <img
               class="product__img"
-              src="../public/imgs/product12.png"
+              src="./public/imgs/product12.png"
               alt="product"
             />
             <p class="product__name">Relógio Gamer</p>
@@ -215,7 +215,7 @@
       <section class="about__container">
         <div class="about__nav__container">
           <div class="about__img__container">
-            <img class="about__img" src="../public/imgs/Logo.png" alt="logo" />
+            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
           </div>
           <ul class="about__links">
             <li><a href="#">Quem somos nós </a></li>
@@ -251,6 +251,6 @@
     <footer class="rodape">
       <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
-    <script src="../services/send_message.js"></script>
+    <script src="./services/send_message.js"></script>
   </body>
 </html>
