--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -54,7 +54,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product1.png"
+                src="./public/imgs/product1.png"
                 alt="product"
               />
               <p class="product__name">Caneca Stormtrooper</p>
@@ -64,7 +64,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product2.png"
+                src="./public/imgs/product2.png"
                 alt="product"
               />
               <p class="product__name">Mascara Darth Vader</p>
@@ -74,7 +74,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product3.png"
+                src="./public/imgs/product3.png"
                 alt="product"
               />
               <p class="product__name">Boneco Yoda</p>
@@ -84,7 +84,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product4.png"
+                src="./public/imgs/product4.png"
                 alt="product"
               />
               <p class="product__name">Armadura Stormtrooper</p>
@@ -94,7 +94,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product5.png"
+                src="./public/imgs/product5.png"
                 alt="product"
               />
               <p class="product__name">Controle Xbox</p>
@@ -104,7 +104,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product6.png"
+                src="./public/imgs/product6.png"
                 alt="product"
               />
               <p class="product__name">Playstation 5</p>
@@ -114,7 +114,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product7.png"
+                src="./public/imgs/product7.png"
                 alt="product"
               />
               <p class="product__name">Nitendo 64</p>
@@ -124,7 +124,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product8.png"
+                src="./public/imgs/product8.png"
                 alt="product"
               />
               <p class="product__name">Nitendo Switch</p>
@@ -134,7 +134,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product9.png"
+                src="./public/imgs/product9.png"
                 alt="product"
               />
               <p class="product__name">Produto XPTO</p>
@@ -144,7 +144,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product10.png"
+                src="./public/imgs/product10.png"
                 alt="product"
               />
               <p class="product__name">Camisa Gamer</p>
@@ -154,7 +154,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product11.png"
+                src="./public/imgs/product11.png"
                 alt="product"
               />
               <p class="product__name">Boneco Sonic</p>
@@ -164,7 +164,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product12.png"
+                src="./public/imgs/product12.png"
                 alt="product"
               />
               <p class="product__name">Relógio Gamer</p>
@@ -174,7 +174,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product13.png"
+                src="./public/imgs/product13.png"
                 alt="product"
               />
               <p class="product__name">Baby Yoda</p>
@@ -184,7 +184,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product14.png"
+                src="./public/imgs/product14.png"
                 alt="product"
               />
               <p class="product__name">Kylo Ren</p>
@@ -194,7 +194,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product15.png"
+                src="./public/imgs/product15.png"
                 alt="product"
               />
               <p class="product__name">Xbox Series X</p>
@@ -204,7 +204,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product16.png"
+                src="./public/imgs/product16.png"
                 alt="product"
               />
               <p class="product__name">Game Boy</p>
@@ -214,7 +214,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product17.png"
+                src="./public/imgs/product17.png"
                 alt="product"
               />
               <p class="product__name">X Burguer T-Shirt</p>
@@ -224,7 +224,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product18.png"
+                src="./public/imgs/product18.png"
                 alt="product"
               />
               <p class="product__name">Pikachu Fantasy</p>
@@ -238,11 +238,7 @@
         <section class="about__container">
           <div class="about__nav__container">
             <div class="about__img__container">
-              <img
-                class="about__img"
-                src="../public/imgs/Logo.png"
-                alt="logo"
-              />
+              <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
             </div>
             <ul class="about__links">
               <li><a href="#">Quem somos nós </a></li>
@@ -279,6 +275,6 @@
         <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
       </footer>
     </main>
-    <script src="../services/send_message.js"></script>
+    <script src="./services/send_message.js"></script>
   </body>
 </html>
