--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
       <section class="about__container">
         <div class="about__nav__container">
           <div class="about__img__container">
-            <img class="about__img" src="../public/imgs/Logo.png" alt="logo" />
+            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
           </div>
           <ul class="about__links">
             <li><a href="#">Quem somos nós </a></li>
@@ -101,7 +101,7 @@
     <footer class="rodape">
       <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
-    <script src="../services/login__validation.js"></script>
-    <script src="../services/send_message.js"></script>
+    <script src="./services/login__validation.js"></script>
+    <script src="./services/send_message.js"></script>
   </body>
 </html>
