--- a/new__product.html
+++ b/new__product.html
@@ -23,7 +23,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -79,7 +79,7 @@
       <section class="about__container">
         <div class="about__nav__container">
           <div class="about__img__container">
-            <img class="about__img" src="../public/imgs/Logo.png" alt="logo" />
+            <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
           </div>
           <ul class="about__links">
             <li><a href="#">Quem somos nós </a></li>
@@ -115,6 +115,6 @@
     <footer class="rodape">
       <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
-    <script src="../services/send_message.js"></script>
+    <script src="./services/send_message.js"></script>
   </body>
 </html>
