--- a/product.html
+++ b/product.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/desktop__mq.css" />
-    <link rel="stylesheet" href="../styles/tablet__mq.css" />
-    <link rel="stylesheet" href="../styles/mobile__mq.css" />
-    <link rel="stylesheet" href="../styles/globalStyles.css" />
-    <link rel="stylesheet" href="../styles/home-styles.css" />
-    <link rel="stylesheet" href="../styles/product-styles.css" />
+    <link rel="stylesheet" href="./styles/desktop__mq.css" />
+    <link rel="stylesheet" href="./styles/tablet__mq.css" />
+    <link rel="stylesheet" href="./styles/mobile__mq.css" />
+    <link rel="stylesheet" href="./styles/globalStyles.css" />
+    <link rel="stylesheet" href="./styles/home-styles.css" />
+    <link rel="stylesheet" href="./styles/product-styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -24,7 +24,7 @@
       <nav class="navbar">
         <div class="logo__container">
           <a href="./index.html"
-            ><img class="logo__img" src="../public/imgs/Logo.png" alt=""
+            ><img class="logo__img" src="./public/imgs/Logo.png" alt=""
           /></a>
         </div>
         <div class="serching__container">
@@ -48,7 +48,7 @@
         <div class="img__product__container">
           <img
             class="img__product"
-            src="../public/imgs/product7.png"
+            src="./public/imgs/product7.png"
             alt="product"
           />
         </div>
@@ -73,7 +73,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product1.png"
+                src="./public/imgs/product1.png"
                 alt="product"
               />
               <p class="product__name">Caneca Stormtrooper</p>
@@ -83,7 +83,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product2.png"
+                src="./public/imgs/product2.png"
                 alt="product"
               />
               <p class="product__name">Mascara Darth Vader</p>
@@ -93,7 +93,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product3.png"
+                src="./public/imgs/product3.png"
                 alt="product"
               />
               <p class="product__name">Boneco Yoda</p>
@@ -103,7 +103,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product4.png"
+                src="./public/imgs/product4.png"
                 alt="product"
               />
               <p class="product__name">Armadura Stormtrooper</p>
@@ -113,7 +113,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product5.png"
+                src="./public/imgs/product5.png"
                 alt="product"
               />
               <p class="product__name">Controle Xbox</p>
@@ -123,7 +123,7 @@
             <div class="product">
               <img
                 class="product__img"
-                src="../public/imgs/product6.png"
+                src="./public/imgs/product6.png"
                 alt="product"
               />
               <p class="product__name">Playstation 5</p>
@@ -137,11 +137,7 @@
         <section class="about__container">
           <div class="about__nav__container">
             <div class="about__img__container">
-              <img
-                class="about__img"
-                src="../public/imgs/Logo.png"
-                alt="logo"
-              />
+              <img class="about__img" src="./public/imgs/Logo.png" alt="logo" />
             </div>
             <ul class="about__links">
               <li><a href="#">Quem somos nós </a></li>
@@ -178,6 +174,6 @@
         <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
       </footer>
     </main>
-    <script src="../services/send_message.js"></script>
+    <script src="./services/send_message.js"></script>
   </body>
 </html>
