--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             />
             <p class="product__name">Caneca Stormtrooper</p>
             <p class="product__price">R$65,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -82,7 +82,7 @@
             />
             <p class="product__name">Mascara Darth Vader</p>
             <p class="product__price">R$120,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -92,7 +92,7 @@
             />
             <p class="product__name">Boneco Yoda</p>
             <p class="product__price">R$135,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -102,7 +102,7 @@
             />
             <p class="product__name">Armadura Stormtrooper</p>
             <p class="product__price">R$575,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
         </div>
       </section>
@@ -124,7 +124,7 @@
             />
             <p class="product__name">Controle Xbox</p>
             <p class="product__price">R$465,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -134,7 +134,7 @@
             />
             <p class="product__name">Playstation 5</p>
             <p class="product__price">R$4.120,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -144,7 +144,7 @@
             />
             <p class="product__name">Nitendo 64</p>
             <p class="product__price">R$1.035,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -154,7 +154,7 @@
             />
             <p class="product__name">Nitendo Switch</p>
             <p class="product__price">R$2.575,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
         </div>
       </section>
@@ -163,7 +163,7 @@
       <section class="products__section" data-product>
         <div class="text__product">
           <h1 class="linha__title">Diversos</h1>
-          <a class="link__product" href="#"
+          <a class="link__product" href="./product.html"
             >Ver tudo <i class="fa-solid fa-arrow-right"></i
           ></a>
         </div>
@@ -176,7 +176,7 @@
             />
             <p class="product__name">Produto XPTO</p>
             <p class="product__price">R$1,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -186,7 +186,7 @@
             />
             <p class="product__name">Camisa Gamer</p>
             <p class="product__price">R$120,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -196,7 +196,7 @@
             />
             <p class="product__name">Boneco Sonic</p>
             <p class="product__price">R$185,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
           <div class="product">
             <img
@@ -206,7 +206,7 @@
             />
             <p class="product__name">Relógio Gamer</p>
             <p class="product__price">R$775,00</p>
-            <a class="link__product" href="#">Ver produto</a>
+            <a class="link__product" href="./product.html">Ver produto</a>
           </div>
         </div>
       </section>
