--- a/new__product.html
+++ b/new__product.html
@@ -36,7 +36,9 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
-        <a class="btn light__btn menu__btn" href="#">Menu administrador</a>
+        <a class="btn light__btn menu__btn" href="./product.html"
+          >Menu administrador</a
+        >
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
