--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
               />
               <p class="product__name">Caneca Stormtrooper</p>
               <p class="product__price">R$65,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -69,7 +69,7 @@
               />
               <p class="product__name">Mascara Darth Vader</p>
               <p class="product__price">R$120,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -79,7 +79,7 @@
               />
               <p class="product__name">Boneco Yoda</p>
               <p class="product__price">R$135,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -89,7 +89,7 @@
               />
               <p class="product__name">Armadura Stormtrooper</p>
               <p class="product__price">R$575,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -99,7 +99,7 @@
               />
               <p class="product__name">Controle Xbox</p>
               <p class="product__price">R$465,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -109,7 +109,7 @@
               />
               <p class="product__name">Playstation 5</p>
               <p class="product__price">R$4.120,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -119,7 +119,7 @@
               />
               <p class="product__name">Nitendo 64</p>
               <p class="product__price">R$1.035,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -129,7 +129,7 @@
               />
               <p class="product__name">Nitendo Switch</p>
               <p class="product__price">R$2.575,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -139,7 +139,7 @@
               />
               <p class="product__name">Produto XPTO</p>
               <p class="product__price">R$1,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -149,7 +149,7 @@
               />
               <p class="product__name">Camisa Gamer</p>
               <p class="product__price">R$120,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -159,7 +159,7 @@
               />
               <p class="product__name">Boneco Sonic</p>
               <p class="product__price">R$185,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -169,7 +169,7 @@
               />
               <p class="product__name">Relógio Gamer</p>
               <p class="product__price">R$775,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -179,7 +179,7 @@
               />
               <p class="product__name">Baby Yoda</p>
               <p class="product__price">R$335,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -189,7 +189,7 @@
               />
               <p class="product__name">Kylo Ren</p>
               <p class="product__price">R$175,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -199,7 +199,7 @@
               />
               <p class="product__name">Xbox Series X</p>
               <p class="product__price">R$4.775,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -209,7 +209,7 @@
               />
               <p class="product__name">Game Boy</p>
               <p class="product__price">R$775,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -219,7 +219,7 @@
               />
               <p class="product__name">X Burguer T-Shirt</p>
               <p class="product__price">R$75,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
             <div class="product">
               <img
@@ -229,7 +229,7 @@
               />
               <p class="product__name">Pikachu Fantasy</p>
               <p class="product__price">R$285,00</p>
-              <a class="link__product" href="#">Ver produto</a>
+              <a class="link__product" href="./product.html">Ver produto</a>
             </div>
           </div>
         </section>
