--- a/product.html
+++ b/product.html
@@ -66,7 +66,7 @@
       </div>
       <div class="products">
         <section class="products__section" data-product>
-          <div class="text__product">
+          <div class="text__products_similar">
             <h3 class="linha__title">Produtos similares</h3>
           </div>
           <div class="product__container">
