--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <i class="fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
-        <a class="btn light__btn" href="./login.html">Login</a>
+        <a class="btn light__btn" href="./pages/login.html">Login</a>
         <button class="search__btn">
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
