--- a/pages/new__product.html
+++ b/pages/new__product.html
@@ -22,7 +22,7 @@
     <header class="cabecalho">
       <nav class="navbar">
         <div class="logo__container">
-          <a href="./index.html"
+          <a href="../index.html"
             ><img
               class="logo__img"
               src="../public/imgs/Logo.svg"
